# Cache_2Q_simulation

./: .gitignore  CMakeLists.txt  Makefile  README.md  cache
include/: cache_2q.hpp  cache_ideal.hpp  input_utils.hpp  tests_2q.hpp
source/: cache_2q.cpp  cache_ideal.cpp  input_utils.cpp  main.cpp  tests_2q.cpp
tests/: CMakeLists.txt  Makefile  verify.sh
tests/tests_files/: test2.in
